--- a/app/views/layouts/national.html.erb
+++ b/app/views/layouts/national.html.erb
@@ -16,6 +16,7 @@
   <!-- //Prefetch DNS for external assets -->
 
   <!-- Title -->
+  <!-- TODO: Get page title from Kirsten -->
   <title><%= meta.page_title %></title>
   <!-- //Title -->
 
