--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -3,23 +3,32 @@
 <%# Background images of the centre tiles at each breakpoint %>
 <% content_for :custom_styles do %>
   <style>
-  <%# [BACKEND] We need to dynamically generate the class names for each centre and its relevant background image %>
+  <%# [BACKEND] We need to dynamically generate the class names for each centre and its relevant background image. At the moment this is duplicated from  `_hero_custom_styles.html.erb`. Can we refactor it so we just use same custom styles? %>
+
+  <%# Hero image at small breakpoint %>
    @media (max-width: 25em) {
     .national__centre-tile--bondijunction {
       background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_400,h_107,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
       }
     }
 
+    <%# Hero image at medium breakpoint %>
     @media (min-width: 25.0625em) and (max-width: 48em) {    
       .national__centre-tile--bondijunction {
         background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_768,h_205,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
       }
     }
 
+    <%# Hero image at large breakpoint %>
     @media (min-width: 48.0625em) {    
       .national__centre-tile--bondijunction {
         background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_1600,h_300,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
       }
+    }
+
+    <%# Old IE %>
+    .old-ie .national__centre-tile--bondijunction {
+      background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_1600,h_300,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
     }
   </style>
 <% end %>
@@ -75,12 +84,24 @@
       <h2>Find your centre</h2>
       <%# Tab nav %>
       <ul class="tab__nav horiz-list">
-          <li>
-            <a class="is-active" href="#tab-nsw">NSW</a>
-          </li>
-          <li>
-            <a href="#tab-act">ACT</a>
-          </li>
+        <li>
+          <a class="is-active" href="#tab-nsw"><abbr title="New South Wales">NSW</abbr></a>
+        </li>
+        <li>
+          <a href="#tab-act"><abbr ttle="Australian Capital Territoy">ACT</abbr></a>
+        </li>
+        <li>
+          <a href="#tab-qld"><abbr title="Queensland">QLD</abbr></a>
+        </li>
+        <li>
+          <a href="#tab-vic"><abbr title="Victoria">VIC</abbr></a>
+        </li>
+        <li>
+          <a href="#tab-sa"><abbr title="South Australia">SA</abbr></a>
+        </li>
+        <li>
+          <a href="#tab-wa"><abbr title="Western Australia">WA</abbr></a>
+        </li>
       </ul>
       <%# //Tab nav %>
     </div>
@@ -104,6 +125,15 @@
           </div>
         </a>
       </li>
+
+      <li>
+        <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
+          <div class="container">
+            <h3 class="h1">Bondi Junction</h3>
+            <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
+          </div>
+        </a>
+      </li>
     </ul>
     <%# //NSW %>
 
@@ -112,15 +142,109 @@
       <li>
         <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
           <div class="container">
-            <h3 class="h1">Centre 1</h3>
+            <h3 class="h1">Centre ACT</h3>
             <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
           </div>
         </a>
       </li>
     </ul>
     <%# //ACT %>
+
+    <%# QLD %>
+    <ul id="tab-qld" class="tab__content">
+      <li>
+        <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
+          <div class="container">
+            <h3 class="h1">Centre QLD</h3>
+            <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <%# //QLD %>
+
+    <%# VIC %>
+    <ul id="tab-vic" class="tab__content">
+      <li>
+        <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
+          <div class="container">
+            <h3 class="h1">Centre VIC</h3>
+            <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <%# //VIC %>
+
+    <%# SA %>
+    <ul id="tab-sa" class="tab__content">
+      <li>
+        <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
+          <div class="container">
+            <h3 class="h1">Centre SA</h3>
+            <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <%# //SA %>
+
+    <%# WA %>
+    <ul id="tab-wa" class="tab__content">
+      <li>
+        <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
+          <div class="container">
+            <h3 class="h1">Centre WA</h3>
+            <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <%# //WA %>
   </main>
   <%# //Tabs %>
+
+  <%# Footer %>
+  <footer class="national__footer" role="contentinfo">
+    <div class="container">
+      <ul class="horiz-list--slash">
+        <li>
+          <a href="#">Westfild Group</a>
+        </li>
+        <li>
+          <a href="#"><abbr title="Australia">AU</abbr></a>
+        </li>
+        <li>
+          <a href="#"><abbr title="New Zealand">NZ</abbr></a>
+        </li>
+        <li>
+          <a href="#"><abbr title="United Kingdom">UK</abbr></a>
+        </li>
+        <li>
+          <a href="#"><abbr title="United States of America">USA</abbr></a>
+        </li>
+        <li>
+          <a href="#">Jobs</a>
+        </li>
+        <li>
+          <a href="#">Our Community</a>
+        </li>
+      </ul>
+
+      <ul class="horiz-list--slash">
+        <li>
+          <small>&copy; Westfield 2013</small>
+        </li>
+        <li>
+          <a href="#">Terms &amp; Conditions</a>
+        </li>
+        <li>
+          <a href="#">Privacy Policy</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <%# //Footer %>
 
 </div>
 <%# //National landing page wrapper %>
