--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -62,7 +62,12 @@
 
       <%# Nav %>
       <nav role="navigation">
-        <ul class="horiz-list">
+        <ul class="horiz-list horiz-list--gutter-half">
+          <li>
+            <a href="#">
+              <span class="icon icon--shirt" aria-hidden="true"></span>Shop products
+            </a>
+          </li>
           <li>
             <a href="http://www.westfieldgiftcards.com.au" rel="external">
               <span class="icon icon--gift-card" aria-hidden="true"></span>Buy Gift Cards
@@ -111,7 +116,7 @@
       <li>
         <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
           <div class="container">
-            <h3 class="h1">Bondi Junction</h3>
+            <h3 class="h1">Tea Tree Plaza</h3>
             <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
           </div>
         </a>
@@ -120,7 +125,7 @@
       <li>
         <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
           <div class="container">
-            <h3 class="h1">Burwood</h3>
+            <h3 class="h1">Warringah Mall</h3>
             <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
           </div>
         </a>
