--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -162,6 +162,9 @@
   color: $color-brand;
 }
 
+/* Shirt */
+.icon--shirt:before {content: "\e037";}
+
 /* Arrow up */
 .icon--arrow-up:before {content: "\e018";}
 
