Added video thumbnail and various fixes

--- a/app/assets/stylesheets/partials/base/_misc.scss
+++ b/app/assets/stylesheets/partials/base/_misc.scss
@@ -19,6 +19,7 @@ hr {
 abbr[title] {
   cursor: help;
 
+  /* Remove cursor and border on `abbr` when it's in an anchor */
   a & {
     cursor: pointer;
     border-bottom: 0;
