--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -165,6 +165,9 @@
 /* Shirt */
 .icon--shirt:before {content: "\e037";}
 
+/* Play button */
+.icon--play:before {content: "\e038";}
+
 /* Arrow up */
 .icon--arrow-up:before {content: "\e018";}
 
